Update to OTEL 0.110.0

--- a/otel-collector-builder.yaml
+++ b/otel-collector-builder.yaml
@@ -17,3 +17,6 @@ processors:
 
 receivers:
   - gomod: go.opentelemetry.io/collector/receiver/otlpreceiver vOTEL_VERSION
+
+providers:
+  - gomod: go.opentelemetry.io/collector/confmap/provider/envprovider v1.16.0
